--- a/package.json
+++ b/package.json
@@ -2,19 +2,14 @@
   "name": "exproy_backend",
   "version": "1.0.0",
   "main": "server.js",
-  "description": "",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.3",
-    "twilio": "^5.10.6"
+    "mongoose": "^8.19.3"
   }
 }
